pkgs/dartcv_core/src/core.h

CvStatus *Mat_FromPtr(Mat m, int rows, int cols, int type, int prows, int pcols, Mat *rval);
CvStatus *Mat_FromCMat(Mat m, Mat *rval);
CvStatus *Mat_FromRange(Mat m, int rowStart, int rowEnd, int colStart, int colEnd, Mat *rval);
int Mat_Flags(Mat m);
bool Mat_Empty(Mat m);
int Mat_ElemSize(Mat m);
int Mat_ElemSize1(Mat m);
CvStatus *Mat_GetInt(Mat m, int row, int col, int32_t *rval);
CvStatus *Mat_GetFloat(Mat m, int row, int col, float *rval);
CvStatus *Mat_GetFloat3(Mat m, int x, int y, int z, float *rval);
CvStatus *Mat_GetDouble(Mat m, int row, int col, double *rval);
CvStatus *Mat_GetDouble3(Mat m, int x, int y, int z, double *rval);
CvStatus *Mat_DivideMat(Mat m, Mat val);
CvStatus *Mat_DivideUChar(Mat m, uint8_t val);
CvStatus *Mat_DivideSChar(Mat m, int8_t val);
CvStatus *Mat_DivideI16(Mat m, int16_t val);
CvStatus *Mat_DivideU16(Mat m, uint16_t val);
CvStatus *Mat_DivideI32(Mat m, int32_t val);
CvStatus *Mat_DivideFloat(Mat m, float_t val);
CvStatus *Mat_Eigen(Mat src, Mat eigenvalues, Mat eigenvectors, bool *rval);
CvStatus *Mat_EigenNonSymmetric(Mat src, Mat eigenvalues, Mat eigenvectors);
CvStatus *Mat_Exp(Mat src, Mat dst);
CvStatus *Mat_ExtractChannel(Mat src, Mat dst, int coi);
CvStatus *Mat_FindNonZero(Mat src, Mat idx);
CvStatus *Mat_Flip(Mat src, Mat dst, int flipCode);
CvStatus *Mat_Gemm(Mat src1, Mat src2, double alpha, Mat src3, double beta, Mat dst, int flags);