pkgs/dartcv_core/src/core_async.h

CvStatus *Mat_Eye_Async(int rows, int cols, int type, CvCallback_1 callback);