pkgs/dartcv_core/lib/src/g/core.g.dart


  late final _Mat_DivideFloatPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, float_t)>>(
          'Mat_DivideFloat');
  late final _Mat_DivideFloat = _Mat_DivideFloatPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, double)>();

  ffi.Pointer<CvStatus> Mat_DivideI16(
    Mat m,
    int val,
  ) {
    return _Mat_DivideI16(
      m,
      val,
    );
  }

  late final _Mat_DivideI16Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Int16)>>(
      'Mat_DivideI16');
  late final _Mat_DivideI16 =
      _Mat_DivideI16Ptr.asFunction<ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> Mat_DivideI32(
    Mat m,
    int val,
  ) {
    return _Mat_DivideI32(
      m,
      val,
    );
  }

  late final _Mat_DivideI32Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Int32)>>(
      'Mat_DivideI32');
  late final _Mat_DivideI32 =
      _Mat_DivideI32Ptr.asFunction<ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> Mat_DivideMat(
    Mat m,
    Mat val,
  ) {
    return _Mat_DivideMat(
      m,
      val,
    );
  }

  late final _Mat_DivideMatPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat)>>(
          'Mat_DivideMat');
  late final _Mat_DivideMat =
      _Mat_DivideMatPtr.asFunction<ffi.Pointer<CvStatus> Function(Mat, Mat)>();

  ffi.Pointer<CvStatus> Mat_DivideSChar(
    Mat m,
    int val,
  ) {
    return _Mat_DivideSChar(
      m,
      val,
    );
  }

  late final _Mat_DivideSCharPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Int8)>>(
      'Mat_DivideSChar');
  late final _Mat_DivideSChar = _Mat_DivideSCharPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> Mat_DivideU16(
    Mat m,
    int val,
  ) {
    return _Mat_DivideU16(
      m,
      val,
    );
  }

  late final _Mat_DivideU16Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Uint16)>>(
      'Mat_DivideU16');
  late final _Mat_DivideU16 =
      _Mat_DivideU16Ptr.asFunction<ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> Mat_DivideUChar(
    Mat m,
    int val,
  ) {
    return _Mat_DivideUChar(
      m,
      val,
    );
  }

  late final _Mat_DivideUCharPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Uint8)>>(
      'Mat_DivideUChar');
  late final _Mat_DivideUChar = _Mat_DivideUCharPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> Mat_Eigen(
    Mat src,
    Mat eigenvalues,
    Mat eigenvectors,
    ffi.Pointer<ffi.Bool> rval,
  ) {
    return _Mat_Eigen(
      src,
      eigenvalues,
      eigenvectors,
      rval,
    );
  }

  late final _Mat_EigenPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, Mat, ffi.Pointer<ffi.Bool>)>>('Mat_Eigen');
  late final _Mat_Eigen = _Mat_EigenPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, ffi.Pointer<ffi.Bool>)>();

  ffi.Pointer<CvStatus> Mat_EigenNonSymmetric(
    Mat src,
    Mat eigenvalues,
    Mat eigenvectors,
  ) {
    return _Mat_EigenNonSymmetric(
      src,
      eigenvalues,
      eigenvectors,
    );
  }

  late final _Mat_EigenNonSymmetricPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>>(
      'Mat_EigenNonSymmetric');
  late final _Mat_EigenNonSymmetric = _Mat_EigenNonSymmetricPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>();

  int Mat_ElemSize(
    Mat m,
  ) {
    return _Mat_ElemSize(
      m,
    );
  }

  late final _Mat_ElemSizePtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(Mat)>>('Mat_ElemSize');
  late final _Mat_ElemSize =
      _Mat_ElemSizePtr.asFunction<int Function(Mat)>(isLeaf: true);

  int Mat_ElemSize1(
    Mat m,
  ) {
    return _Mat_ElemSize1(
      m,
    );
  }

  late final _Mat_ElemSize1Ptr =
      _lookup<ffi.NativeFunction<ffi.Size Function(Mat)>>('Mat_ElemSize1');
  late final _Mat_ElemSize1 =
      _Mat_ElemSize1Ptr.asFunction<int Function(Mat)>(isLeaf: true);

  bool Mat_Empty(
    Mat m,
  ) {
    return _Mat_Empty(
      m,
    );
  }

  late final _Mat_EmptyPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(Mat)>>('Mat_Empty');
  late final _Mat_Empty = _Mat_EmptyPtr.asFunction<bool Function(Mat)>();

  ffi.Pointer<CvStatus> Mat_Exp(
    Mat src,
    Mat dst,
  ) {
    return _Mat_Exp(
      src,
      dst,
    );
  }

  late final _Mat_ExpPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat)>>(
          'Mat_Exp');
  late final _Mat_Exp =
      _Mat_ExpPtr.asFunction<ffi.Pointer<CvStatus> Function(Mat, Mat)>();

  ffi.Pointer<CvStatus> Mat_ExtractChannel(
    Mat src,
    Mat dst,
    int coi,
  ) {
    return _Mat_ExtractChannel(
      src,
      dst,
      coi,
    );
  }

  late final _Mat_ExtractChannelPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int)>>(
      'Mat_ExtractChannel');
  late final _Mat_ExtractChannel = _Mat_ExtractChannelPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, int)>();

  ffi.Pointer<CvStatus> Mat_Eye_Async(
    int rows,
    int cols,
    int type,
    imp1.CvCallback_1 callback,
  ) {
    return _Mat_Eye_Async(
      rows,
      cols,
      type,
      callback,
    );
  }

  late final _Mat_Eye_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Int, ffi.Int, ffi.Int, imp1.CvCallback_1)>>('Mat_Eye_Async');
  late final _Mat_Eye_Async = _Mat_Eye_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(int, int, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> Mat_FindNonZero(
    Mat src,
    Mat idx,
  ) {
    return _Mat_FindNonZero(
      src,
      idx,
    );
  }

  late final _Mat_FindNonZeroPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat)>>(
          'Mat_FindNonZero');
  late final _Mat_FindNonZero = _Mat_FindNonZeroPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat)>();

  int Mat_Flags(
    Mat m,
  ) {
    return _Mat_Flags(
      m,
    );
  }

  late final _Mat_FlagsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(Mat)>>('Mat_Flags');
  late final _Mat_Flags =
      _Mat_FlagsPtr.asFunction<int Function(Mat)>(isLeaf: true);

  ffi.Pointer<CvStatus> Mat_Flip(
    Mat src,
    Mat dst,
    int flipCode,
  ) {
    return _Mat_Flip(
      src,
      dst,
      flipCode,
    );
  }

  late final _Mat_FlipPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int)>>('Mat_Flip');
  late final _Mat_Flip =
      _Mat_FlipPtr.asFunction<ffi.Pointer<CvStatus> Function(Mat, Mat, int)>();

  ffi.Pointer<CvStatus> Mat_FromCMat(
    Mat m,
    ffi.Pointer<Mat> rval,
  ) {
    return _Mat_FromCMat(
      m,
      rval,
    );
  }

  late final _Mat_FromCMatPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Pointer<Mat>)>>('Mat_FromCMat');
  late final _Mat_FromCMat = _Mat_FromCMatPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> Mat_FromPtr(
    Mat m,
    int rows,
    int cols,
    int type,
    int prows,
    int pcols,
    ffi.Pointer<Mat> rval,
  ) {
    return _Mat_FromPtr(
      m,
      rows,
      cols,
      type,
      prows,
      pcols,
      rval,
    );
  }

  late final _Mat_FromPtrPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Int,
              ffi.Int, ffi.Int, ffi.Pointer<Mat>)>>('Mat_FromPtr');
  late final _Mat_FromPtr = _Mat_FromPtrPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, int, int, int, int, int, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> Mat_FromRange(
    Mat m,
    int rowStart,
    int rowEnd,
    int colStart,
    int colEnd,
    ffi.Pointer<Mat> rval,
  ) {
    return _Mat_FromRange(
      m,
      rowStart,
      rowEnd,
      colStart,
      colEnd,
      rval,
    );
  }

  late final _Mat_FromRangePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Int,
              ffi.Int, ffi.Pointer<Mat>)>>('Mat_FromRange');
  late final _Mat_FromRange = _Mat_FromRangePtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, int, int, int, int, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> Mat_Gemm(
    Mat src1,
    Mat src2,
    double alpha,
    Mat src3,
    double beta,
    Mat dst,
    int flags,
  ) {
    return _Mat_Gemm(
      src1,
      src2,
      alpha,
      src3,
      beta,
      dst,
      flags,
    );
  }

  late final _Mat_GemmPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Double, Mat, ffi.Double,
              Mat, ffi.Int)>>('Mat_Gemm');
  late final _Mat_Gemm = _Mat_GemmPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, double, Mat, double, Mat, int)>();

  ffi.Pointer<CvStatus> Mat_GetDouble(
    Mat m,
    int row,
    int col,
    ffi.Pointer<ffi.Double> rval,
  ) {
    return _Mat_GetDouble(
      m,
      row,
      col,
      rval,
    );
  }

  late final _Mat_GetDoublePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int,
              ffi.Pointer<ffi.Double>)>>('Mat_GetDouble');
  late final _Mat_GetDouble = _Mat_GetDoublePtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, int, int, ffi.Pointer<ffi.Double>)>(isLeaf: true);

  ffi.Pointer<CvStatus> Mat_GetDouble3(
    Mat m,
    int x,
    int y,
    int z,
    ffi.Pointer<ffi.Double> rval,
  ) {
    return _Mat_GetDouble3(
      m,
      x,
      y,
      z,
      rval,
    );
  }

  late final _Mat_GetDouble3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Int,
              ffi.Pointer<ffi.Double>)>>('Mat_GetDouble3');
  late final _Mat_GetDouble3 = _Mat_GetDouble3Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, int, int, int, ffi.Pointer<ffi.Double>)>(isLeaf: true);

  ffi.Pointer<CvStatus> Mat_GetFloat(
    Mat m,
    int row,
    int col,
    ffi.Pointer<ffi.Float> rval,
  ) {
    return _Mat_GetFloat(
      m,
      row,
      col,
      rval,
    );
  }

  late final _Mat_GetFloatPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Int, ffi.Int, ffi.Pointer<ffi.Float>)>>('Mat_GetFloat');
  late final _Mat_GetFloat = _Mat_GetFloatPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, int, int, ffi.Pointer<ffi.Float>)>(isLeaf: true);

  ffi.Pointer<CvStatus> Mat_GetFloat3(
    Mat m,
    int x,
    int y,
    int z,
    ffi.Pointer<ffi.Float> rval,
  ) {
    return _Mat_GetFloat3(
      m,
      x,
      y,
      z,
      rval,
    );
  }

  late final _Mat_GetFloat3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Int,
              ffi.Pointer<ffi.Float>)>>('Mat_GetFloat3');
  late final _Mat_GetFloat3 = _Mat_GetFloat3Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, int, int, int, ffi.Pointer<ffi.Float>)>(isLeaf: true);

  ffi.Pointer<CvStatus> Mat_GetInt(
    Mat m,
    int row,
    int col,
    ffi.Pointer<ffi.Int32> rval,
  ) {
    return _Mat_GetInt(
      m,
      row,
      col,
      rval,
    );
  }

  late final _Mat_GetIntPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Int, ffi.Int, ffi.Pointer<ffi.Int32>)>>('Mat_GetInt');
  late final _Mat_GetInt = _Mat_GetIntPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, int, int, ffi.Pointer<ffi.Int32>)>(isLeaf: true);
